--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <div class="SelectSection">
         <h2 id="hobby" class="header">Hobbiju pieraksti</h2>
-        <t1>3</t1>
+        <t1>Inser links here....</t1>
     </div>
     
     <script src="script.js"> </script>
