--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
             <div class="SelectOptions">
                 <li><a href="practice\notes.html">Dienas ieraksti.</a></li>
                 <li><a href="practice\abbreviation.html">ML Abreviatūra un skaidrojumi.</a></li>
+                <li><a href="practice\incubatingPlates.html">ML Audzēšanas plates.</a></li>
             </div>
         </div>
         
         <div class="SelectSection">
             <h2 id="hobby" class="header">Hobbiju pieraksti</h2>
-            <t1>Inser links here....</t1>
+            <div class="SelectOptions">
+                <li><a href="html.html">HTML</a></li>
+                <li><a href="css.html">CSS</a></li>
+            </div>
         </div>
     </div>
-    
-    <script src="script.js"> </script>
 </body>
 </html>
