--- a/school/Organics.html
+++ b/school/Organics.html
@@ -7,7 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <h2>Pieraksti:</h2>
     <li><a href="organics/IUPAC.html">IUPAC nosukumi.</a></li>
-    <script src="script.js"> </script>
+    <h2>Lireratūras avoti:</h2>
+    <ol>
+        <li><a href="https://www.masterorganicchemistry.com/">Visa organika angļu valodā</a></li>
+        <li><a href="http://gramatas.lndb.lv/periodika2-viewer/?lang=fr#issue:694919">Ievad organikai, grāmata latviešu valodā.</a></li>
+    </ol>
 </body>
 </html>
