--- a/practice/incubatingPlates.html
+++ b/practice/incubatingPlates.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <h1>ML Abreviatūra:</h1>
+    <h1>Audzēšanas plates.</h1>
     <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
