--- a/school/Organics.html
+++ b/school/Organics.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <h1 class="header">Organika</h1>
     <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="s.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h2>Pieraksti:</h2>
