--- a/school/abbreviation.html
+++ b/school/abbreviation.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <h1>Abreviatūra un skaidrojumi.</h1>
     <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="s.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body> 
-   
-    <script src="script.js"> </script>
 </body>
 </html>
