--- a/hobby/css.html
+++ b/hobby/css.html
@@ -8,7 +8,25 @@
 </head>
 
 <body> 
-   
+   <h2>Grids</h2>
+   <t1>
+        div-grid-identifier{
+            grid: display;
+        }
+   </t1>
+   <ol>
+        <li>
+            <ul>
+                <li>grid-column-start: starting-colum;</li>
+                <li>grid-column-end: ending-column;</li>
+                <li>grid-row-start: starting-row;</li>
+                <li>grid-row-end: ending-row;</li>
+            </ul>
+        </li>
+        <li>
+            grid-area: row/column/span-row/span-column;
+        </li>
+   </ol>
     <script src="script.js"> </script>
 </body>
 </html>
